--- a/about.html
+++ b/about.html
@@ -16,9 +16,9 @@
 <div class="flexbox fullheight fullwidth">
 	<div class="flex-search" role="main"> 
 		<h1>About - Ten Blue Links</h1>
-		<p>Search Application for “Improving Search UX using Query Analysis and Machine Cues”</p>
+		<p>Search Application for "Improving Search UX using Query Analysis and Machine Cues"</p>
 		<ul>
-			<li>Prototype for Digital Library Forum 2015 presentation: “Is there a Ghost in the [Search] Machine? Improving Search UX using Query Analysis and Machine Cues”</li>
+			<li>Prototype for Digital Library Forum 2015 presentation: "Is there a Ghost in the [Search] Machine? Improving Search UX using Query Analysis and Machine Cues". <a href="http://www.lib.montana.edu/~jason/talks.php" title="slides for Is there a Ghost in the [Search] Machine? Improving Search UX using Query Analysis and Machine Cues">Slides for context are available</a>.</li>
 		</ul>
 		<p><strong>Creator[s]</strong>: Jason A. Clark web: <a href="http://www.jasonclark.info">jason clark</a> twitter: <a href="https://twitter.com/jaclark">@jaclark</a></p>
 		<p><strong>Version</strong>: 1.0.0</p>
