anonymized API keys and IDs

--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@ $url = "https://www.googleapis.com/customsearch/$v?key=$key&cx=$id&alt=$form".(i
 //forecast.io api docs at https://developer.forecast.io/docs/v2
 
 //ADD YOUR_FORECAST.IO_API_KEY_HERE
-$key = 'bd9363de1a48419bf2af38384f5afe8b';
+$key = 'ADD-YOUR-FORECAST.IO-API-KEY-HERE';
 //set default value for latitude to youtube API
 $lat = isset($_REQUEST['lat']) ? strip_tags(floatval($_REQUEST['lat'])) : '49.246292';
 //set default value for latitude to youtube API
